cmake_minimum_required(VERSION 3.26)
project(CLion)

set(CMAKE_CXX_STANDARD 11)

add_executable(CLion main.cpp)

add_executable(test11 leetcode/test11.cpp)
add_executable(2258 leetcode/2258.cpp)
add_executable(2300 leetcode/2300.cpp)
add_executable(765 leetcode/765.cpp)
add_executable(1457 leetcode/1457.cpp)
add_executable(828 leetcode/828.cpp)
add_executable(907 leetcode/907.cpp)
add_executable(2824 leetcode/2824.cpp)
add_executable(1670 leetcode/1670.cpp)
add_executable(2216 leetcode/2216.cpp)
add_executable(1525 leetcode/1525.cpp)
add_executable(917 leetcode/917.cpp)
add_executable(2336 leetcode/2336.cpp)
add_executable(915 leetcode/915.cpp)
add_executable(1657 leetcode/1657.cpp)
add_executable(2671 leetcode/2671.cpp)
add_executable(1110 leetcode/1110.cpp)
add_executable(1557 leetcode/1557.cpp)
add_executable(2661 leetcode/2661.cpp)
add_executable(1855 leetcode/1855.cpp)
add_executable(904 leetcode/904.cpp)
add_executable(1094 leetcode/1094.cpp)
add_executable(2683 leetcode/2683.cpp)
add_executable(1763 leetcode/1763.cpp)
add_executable(1615 leetcode/1615.cpp)
add_executable(1829 leetcode/1829.cpp)
add_executable(1640 leetcode/1640.cpp)
add_executable(1442 leetcode/1442.cpp)
add_executable(2201 leetcode/2201.cpp)
add_executable(5366 acwing/5366.cpp)
add_executable(5367 acwing/5367.cpp)
add_executable(1921 leetcode/1921.cpp)
add_executable(1695 leetcode/1695.cpp)
add_executable(881 leetcode/881.cpp)
add_executable(1726 leetcode/1726.cpp)
add_executable(1423 leetcode/1423.cpp)
add_executable(100144 leetcode/100144.cpp)
add_executable(100153 leetcode/100153.cpp)
add_executable(100145 leetcode/100145.cpp)
add_executable(1400 leetcode/1400.cpp)
add_executable(2591 leetcode/2591.cpp)
add_executable(900 leetcode/900.cpp)
add_executable(2477 leetcode/2477.cpp)
add_executable(2429 leetcode/2429.cpp)
add_executable(1930 leetcode/1930.cpp)
add_executable(2770 leetcode/2770.cpp)
add_executable(1362 leetcode/1362.cpp)
add_executable(865 leetcode/865.cpp)
add_executable(1697 leetcode/1697.cpp)
add_executable(34 leetcode/34.cpp)
add_executable(1802 leetcode/1802.cpp)
add_executable(1822 leetcode/1822.cpp)
add_executable(2646 leetcode/2646.cpp)
add_executable(UnionFind acwing/UnionFind.cpp)
add_executable(bsearch acwing/bsearch.cpp)
add_executable(gcd acwing/gcd.cpp)
add_executable(1861 leetcode/1861.cpp)
add_executable(1023 leetcode/1023.cpp)
add_executable(2178 leetcode/2178.cpp)
add_executable(1991 leetcode/1991.cpp)