cmake_minimum_required(VERSION 3.26)
project(CLion)

set(CMAKE_CXX_STANDARD 11)

add_executable(CLion main.cpp)

add_executable(test11 leetcode/test11.cpp)
add_executable(2258 leetcode/2258.cpp)
add_executable(2300 leetcode/2300.cpp)
add_executable(765 leetcode/765.cpp)
add_executable(1457 leetcode/1457.cpp)
add_executable(828 leetcode/828.cpp)
add_executable(907 leetcode/907.cpp)
add_executable(2824 leetcode/2824.cpp)
add_executable(1670 leetcode/1670.cpp)
add_executable(2216 leetcode/2216.cpp)
add_executable(1525 leetcode/1525.cpp)
add_executable(917 leetcode/917.cpp)
add_executable(2336 leetcode/2336.cpp)
add_executable(915 leetcode/915.cpp)
add_executable(1657 leetcode/1657.cpp)
add_executable(2671 leetcode/2671.cpp)
add_executable(1110 leetcode/1110.cpp)
add_executable(1557 leetcode/1557.cpp)
add_executable(2661 leetcode/2661.cpp)
add_executable(1855 leetcode/1855.cpp)
add_executable(904 leetcode/904.cpp)
add_executable(1094 leetcode/1094.cpp)
add_executable(2683 leetcode/2683.cpp)
add_executable(1763 leetcode/1763.cpp)
add_executable(1615 leetcode/1615.cpp)
add_executable(1829 leetcode/1829.cpp)
add_executable(1640 leetcode/1640.cpp)
add_executable(1442 leetcode/1442.cpp)
add_executable(2201 leetcode/2201.cpp)
add_executable(5366 acwing/5366.cpp)
add_executable(5367 acwing/5367.cpp)
add_executable(1921 leetcode/1921.cpp)
add_executable(1695 leetcode/1695.cpp)
add_executable(881 leetcode/881.cpp)
add_executable(1726 leetcode/1726.cpp)
add_executable(1423 leetcode/1423.cpp)
add_executable(100144 leetcode/100144.cpp)
add_executable(100153 leetcode/100153.cpp)
add_executable(100145 leetcode/100145.cpp)
add_executable(1400 leetcode/1400.cpp)
add_executable(2591 leetcode/2591.cpp)
add_executable(900 leetcode/900.cpp)
add_executable(2477 leetcode/2477.cpp)
add_executable(2429 leetcode/2429.cpp)
add_executable(1930 leetcode/1930.cpp)
add_executable(2770 leetcode/2770.cpp)
add_executable(1362 leetcode/1362.cpp)
add_executable(865 leetcode/865.cpp)
add_executable(1697 leetcode/1697.cpp)
add_executable(34 leetcode/34.cpp)
add_executable(1802 leetcode/1802.cpp)
add_executable(1822 leetcode/1822.cpp)
add_executable(2646 leetcode/2646.cpp)
add_executable(UnionFind acwing/UnionFind.cpp)
add_executable(bsearch acwing/bsearch.cpp)
add_executable(gcd acwing/gcd.cpp)
add_executable(1861 leetcode/1861.cpp)
add_executable(1023 leetcode/1023.cpp)
add_executable(2178 leetcode/2178.cpp)
add_executable(1991 leetcode/1991.cpp)
add_executable(1634 leetcode/1634.cpp)
add_executable(1992 leetcode/1992.cpp)
add_executable(2349 leetcode/2349.cpp)
add_executable(1382 leetcode/1382.cpp)
add_executable(1007 leetcode/1007.cpp)
add_executable(2575 leetcode/2575.cpp)
add_executable(1749 leetcode/1749.cpp)
add_executable(986 leetcode/986.cpp)
add_executable(2008 leetcode/2008.cpp)
add_executable(1283 leetcode/1283.cpp)
add_executable(1233 leetcode/1233.cpp)
add_executable(1104 leetcode/1104.cpp)
add_executable(954 leetcode/954.cpp)
add_executable(testttttt leetcode/testttttt.cpp)
add_executable(2048 leetcode/2048.cpp)
add_executable(1599 leetcode/1599.cpp)
add_executable(2456 leetcode/2456.cpp)
add_executable(1329 leetcode/1329.cpp)
add_executable(100143 leetcode/100143.cpp)
add_executable(100155 leetcode/100155.cpp)
add_executable(100137 leetcode/100137.cpp)
add_executable(100136 leetcode/100136.cpp)
add_executable(2527 leetcode/2527.cpp)
add_executable(2780 leetcode/2780.cpp)
add_executable(2208 leetcode/2208.cpp)
add_executable(2207 leetcode/2207.cpp)
add_executable(1631 leetcode/1631.cpp)
add_executable(2461 leetcode/2461.cpp)
add_executable(2131 leetcode/2131.cpp)
add_executable(2454 leetcode/2454.cpp)
add_executable(2007 leetcode/2007.cpp)
add_executable(1144 leetcode/1144.cpp)
add_executable(2310 leetcode/2310.cpp)
add_executable(2470 leetcode/2470.cpp)
add_executable(1376 leetcode/1376.cpp)
add_executable(856 leetcode/856.cpp)
add_executable(2697 leetcode/2697.cpp)
add_executable(1452 leetcode/1452.cpp)
add_executable(1008 leetcode/1008.cpp)
add_executable(846 leetcode/846.cpp)
add_executable(2044 leetcode/2044.cpp)
add_executable(2132 leetcode/2132.cpp)
add_executable(2592 leetcode/2592.cpp)
add_executable(1109 leetcode/1109.cpp)
add_executable(1019 leetcode/1019.cpp)
add_executable(931 leetcode/931.cpp)
add_executable(1268 leetcode/1268.cpp)
add_executable(2415 leetcode/2415.cpp)
add_executable(1578 leetcode/1578.cpp)
add_executable(981 leetcode/981.cpp)
add_executable(2276 leetcode/2276.cpp)
add_executable(1415 leetcode/1415.cpp)
add_executable(121701 leetcode/100149.cpp)
add_executable(121702 leetcode/100161.cpp)
add_executable(100151 leetcode/100151.cpp)
add_executable(100123 leetcode/100123.cpp)
add_executable(746 leetcode/746.cpp)
add_executable(2288 leetcode/2288.cpp)
add_executable(167 leetcode/167.cpp)
add_executable(74 leetcode/74.cpp)
add_executable(1034 leetcode/1034.cpp)
add_executable(1901 leetcode/1901.cpp)
add_executable(1743 leetcode/1743.cpp)
add_executable(1839 leetcode/1839.cpp)
add_executable(2765 leetcode/2765.cpp)
add_executable(2211 leetcode/2211.cpp)
add_executable(2536 leetcode/2536.cpp)
add_executable(1764 leetcode/1764.cpp)
add_executable(494 leetcode/494.cpp)
add_executable(322 leetcode/322.cpp)
add_executable(518 leetcode/518.cpp)
add_executable(63 leetcode/63.cpp)
add_executable(55 leetcode/55.cpp)
add_executable(17 leetcode/17.cpp)
add_executable(2645 leetcode/2645.cpp)
add_executable(877 leetcode/877.cpp)
add_executable(2866 leetcode/2866.cpp)
add_executable(287 leetcode/287.cpp)
add_executable(1671 leetcode/1671.cpp)
add_executable(300 leetcode/300.cpp)
add_executable(893 leetcode/893.cpp)
add_executable(1962 leetcode/1962.cpp)